--- a/www/INDEX.html
+++ b/www/INDEX.html
@@ -8,9 +8,9 @@
 			initial-scale=1.0, maximum-scale=1.0,
 			user-scalable=no;" />
 			
-		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css" />
-		<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
-		<script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>
+		<link rel="stylesheet" href="file:///C:/Users/samsung/Documents/GitHub/test/www/css/jquery.mobile-1.2.0.min.css" />
+		<script src="js/jquery-1.8.2.min.js"></script>
+		<script src="js/jquery.mobile-1.2.0.min.js"></script>
 				
 		<script type="text/javascript" charset="utf-8"
 			src="cordova-2.2.0.js"></script>
