--- a/index.html
+++ b/index.html
@@ -19,9 +19,13 @@ src="phonegap.js"></script>
 
 <body>
 
-<div data-role="page">
+<div data-role="page" >
 
-	<div data-role="header" data-position="fixed"><h1>My Header</h1></div>
+	<div data-role="header" data-position="fixed">
+		<a href="index.html">Home</a>
+		<h1>My Header</h1>
+		<a href="contact.html">Contact</a>
+	</div>
 	
 	<div data-role="content">
 
